After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 682993 - keybindings: Minor fixes to overlay-key handling
keybindings: Minor fixes to overlay-key handling
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2012-08-29 21:20 UTC by Florian Müllner
Modified: 2012-08-29 21:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
keybindings: Silence a compiler warning (964 bytes, patch)
2012-08-29 21:20 UTC, Florian Müllner
committed Details | Review
keybindings: Fix unsetting of overlay-key (1.28 KB, patch)
2012-08-29 21:20 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2012-08-29 21:20:48 UTC
See patches.
Comment 1 Florian Müllner 2012-08-29 21:20:53 UTC
Created attachment 222867 [details] [review]
keybindings: Silence a compiler warning
Comment 2 Florian Müllner 2012-08-29 21:20:56 UTC
Created attachment 222868 [details] [review]
keybindings: Fix unsetting of overlay-key

Commit 802c1ac4275 fixed updating the overlay key on settings
changes, but missed the case where the setting was set to an
empty value to disable the overlay key altogether.
Comment 3 Jasper St. Pierre (not reading bugmail) 2012-08-29 21:21:28 UTC
Review of attachment 222868 [details] [review]:

Sure.
Comment 4 Jasper St. Pierre (not reading bugmail) 2012-08-29 21:21:37 UTC
Review of attachment 222867 [details] [review]:

Sure.
Comment 5 Florian Müllner 2012-08-29 21:31:37 UTC
Attachment 222867 [details] pushed as b422b6f - keybindings: Silence a compiler warning
Attachment 222868 [details] pushed as 6a32fa9 - keybindings: Fix unsetting of overlay-key